--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,51 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Bebas Neue', sans-serif;
+  max-height: 100vh;
+  overflow: hidden;
+  color: white;
+}
+
+#video-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  z-index: -1;
+}
+
+#content {
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  padding-top: 50px;
+}
+
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
   }
   
-  h1 {
-    font-size: 72px;
+h1 {
+    font-size: 70vh;
+    max-height: 75vh;
+    margin: 0;
   }
   
+button {
+  color: white;
+    font-size: 30vh;
+    background: none;
+    border: none;
+  }
+
   .button-container {
-    margin-top: 20px;
-  }
-  
-  button {
-    font-size: 24px;
-    padding: 10px 20px;
-    margin: 0 10px;
-  }
+  display: flex;
+  width: 30%;
+  align-items: center;
+  justify-content: space-around;
+  max-height: 20vh;
+}
