--- a/styles.css
+++ b/styles.css
@@ -2,50 +2,70 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: 'Bebas Neue', sans-serif;
-  max-height: 100vh;
-  overflow: hidden;
+  height: 100vh;
   color: white;
-}
-
-#video-background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  z-index: -1;
-}
-
-#content {
-  position: relative;
-  z-index: 1;
-  text-align: center;
-  padding-top: 50px;
+  background-image: url(bg.png);
+  background-size: cover;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  
-h1 {
-    font-size: 70vh;
-    max-height: 75vh;
-    margin: 0;
-  }
-  
-button {
-  color: white;
-    font-size: 30vh;
-    background: none;
-    border: none;
-  }
-
-  .button-container {
   display: flex;
-  width: 30%;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
   align-items: center;
-  justify-content: space-around;
-  max-height: 20vh;
+}
+
+#number {
+  font-size: 60vh;
+}
+
+.logo {
+  max-height: 200px;
+  position: absolute;
+  margin: 50px;
+}
+
+/* .banner {
+  position: absolute;
+  display: flex;
+  bottom: 0;
+  max-width: 100vw;
+  overflow: hidden;
+  margin-bottom: 80px;
+  animation: slider 10s infinite;
+}
+
+.banner__logo {
+  max-height: 80px;
+  margin: 0 50px;
+} */
+
+.slider-container {
+  width: 100%;
+  overflow: hidden;
+  position: absolute;
+  bottom: 0;
+}
+
+.slider {
+  display: flex;
+  animation: slide 50s infinite linear;
+}
+
+.slider img {
+  max-width: 100%;
+  max-height: 100px;
+  margin: 60px;
+  height: auto;
+  object-fit: contain;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
