--- a/styles.css
+++ b/styles.css
@@ -2,28 +2,44 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: 'Bebas Neue', sans-serif;
-  height: 100vh;
+  max-height: 100vh;
   color: white;
   background-image: url(bg.png);
   background-size: cover;
+  overflow: hidden;
+  user-select: none;
+}
+
+.retiro {
+  font-size: 120px;
+  font-weight: 600;
+  position: absolute;
+  margin: 0;
+  margin-top: 10px;
+  margin-left: 50vw;
+  width: 100%;
+  overflow: hidden;
+  position: absolute;
+  animation: slide 15s infinite linear;
 }
 
 .container {
+  position: absolute;
+  height: 100vh;
   display: flex;
   width: 100%;
-  height: 100%;
   justify-content: center;
   align-items: center;
+  top: 20px;
 }
 
 #number {
+  margin: 0;
   font-size: 60vh;
 }
 
 .logo {
   max-height: 100px;
-  position: absolute;
-  margin: 50px;
 }
 
 /* .banner {
