--- a/styles.css
+++ b/styles.css
@@ -11,16 +11,16 @@ html, body {
 }
 
 .retiro {
-  font-size: 120px;
+  font-size: 150px;
   font-weight: 600;
   position: absolute;
   margin: 0;
   margin-top: 10px;
   margin-left: 50vw;
-  width: 100%;
   overflow: hidden;
   position: absolute;
   animation: slide 15s infinite linear;
+  white-space: pre;
 }
 
 .container {
