--- a/styles.css
+++ b/styles.css
@@ -8,80 +8,47 @@ html, body {
   background-size: cover;
   overflow: hidden;
   user-select: none;
+  animation: none;
+  overflow-x: hidden;
 }
 
 .retiro {
+  display: flex;
+  justify-content: center;
   font-size: 150px;
   font-weight: 600;
-  position: absolute;
-  margin: 0;
-  margin-top: 10px;
-  margin-left: 50vw;
-  overflow: hidden;
-  position: absolute;
-  animation: slide 15s infinite linear;
-  white-space: pre;
+  margin: auto;
+  width: 100vh;
+  text-wrap: nowrap;
 }
 
 .container {
   position: absolute;
-  height: 100vh;
   display: flex;
   width: 100%;
   justify-content: center;
-  align-items: center;
-  top: 20px;
+  bottom: 110px;
+  height: 200px;
 }
 
-#number {
+.number {
   margin: 0;
-  font-size: 60vh;
+  font-size: 30vh;
 }
 
-.logo {
-  max-height: 100px;
+.number::before {
+  content: "Número: ";
+  font-size: 25vh;
 }
 
-/* .banner {
+.contenedor_video {
+  width: 100vw;
+  height: 100vh;
   position: absolute;
   display: flex;
-  bottom: 0;
-  max-width: 100vw;
-  overflow: hidden;
-  margin-bottom: 80px;
-  animation: slider 10s infinite;
+  justify-content: center;
 }
 
-.banner__logo {
-  max-height: 80px;
-  margin: 0 50px;
-} */
-
-.slider-container {
-  width: 100%;
-  overflow: hidden;
-  position: absolute;
-  bottom: 0;
-}
-
-.slider {
-  display: flex;
-  animation: slide 50s infinite linear;
-}
-
-.slider img {
-  max-width: 100%;
-  max-height: 50px;
-  margin: 60px;
-  height: auto;
-  object-fit: contain;
-}
-
-@keyframes slide {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-100%);
-  }
+.ads {
+  height: 50vh;
 }
