--- a/styles.css
+++ b/styles.css
@@ -16,29 +16,24 @@ html, body {
   display: flex;
   justify-content: center;
   font-size: 150px;
-  font-weight: 600;
+  font-weight: 30vh;
   margin: auto;
   width: 100vh;
   text-wrap: nowrap;
 }
 
-.container {
-  position: absolute;
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  bottom: 110px;
-  height: 200px;
-}
-
 .number {
-  margin: 0;
-  font-size: 30vh;
+  margin: auto;
+  font-size: 20vh;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
 }
 
 .number::before {
   content: "Número: ";
-  font-size: 25vh;
 }
 
 .contenedor_video {
