--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,27 @@
-html, body {
+html {
   margin: 0;
   padding: 0;
   font-family: 'Bebas Neue', sans-serif;
-  max-height: 100vh;
+  height: 100vh;
   color: white;
   background-image: url(bg.png);
   background-size: cover;
   overflow: hidden;
-  user-select: none;
-  animation: none;
   overflow-x: hidden;
+  animation: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  user-select: none;
 }
 
 .body {
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  height: 100%;
-  max-width: 100vw;
 }
 
 .retiro {
