--- a/styles.css
+++ b/styles.css
@@ -15,13 +15,14 @@ html {
   user-select: none;
 }
 
-.body {
+body {
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  height: 100%;
 }
 
 .retiro {
@@ -36,6 +37,7 @@ html {
   margin: 0 auto;
   font-size: 20vh;
   width: 100%;
+  max-height: 210px;
   text-align: center;
 }
 
